--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,7 @@
+:root {
+	--color: white;
+}
+
 * {
 	box-sizing: border-box;
 	font-family: 'Outfit', sans-serif;
@@ -6,6 +10,10 @@
 body {
 	margin: 0;
 	padding: 0;
+}
+
+.ico {
+	color: var(--color);
 }
 
 .ico--click {
@@ -18,7 +26,7 @@ body {
 
 /* Player Control */
 .player-control {
-	background-color: rgb(23, 153, 114);
+	background-color: rgb(23, 155, 116);
 	position: fixed;
 	bottom: 0;
 
@@ -38,14 +46,12 @@ body {
 	align-items: center;
 	justify-content: flex-start;
 
-	background-color: rgb(245, 143, 143);
-
 	width: 30%;
 	height: 65px;
 }
 
 .player-control .song-info .media-img {
-	background-color: aliceblue;
+	background-color: rgb(16, 56, 44);
 	border-radius: 50%;
 
 	width: 64px;
@@ -58,6 +64,7 @@ body {
 	align-items: center;
 	justify-content: center;
 	flex-direction: column;
+	color: var(--color);
 }
 
 .player-control .song-info .media-content .title {
@@ -70,7 +77,7 @@ body {
 }
 
 .player-control .controller {
-	background-color: rgba(239, 252, 255, 0.397);
+	background-color: rgb(23, 155, 116);
 	max-width: 40vw;
 	height: 75px;
 	flex: 1;
@@ -91,6 +98,8 @@ body {
 }
 
 .player-control .controller .part2 {
+	color: var(--color);
+
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
@@ -101,8 +110,9 @@ body {
 }
 
 .player-control .controller .part2 .duration {
-	height: 3px;
 	background-color: white;
+
+	height: 3px;
 	width: 80%;
 }
 
@@ -110,8 +120,6 @@ body {
 	display: flex;
 	align-items: center;
 	justify-content: flex-end;
-
-	background-color: rgb(245, 143, 143);
 
 	width: 30%;
 	height: 65px;
