--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,5 +1,6 @@
 :root {
-	--color: white;
+	--background: white;
+	--color: black;
 }
 
 * {
@@ -12,115 +13,23 @@ body {
 	padding: 0;
 }
 
-.ico {
-	color: var(--color);
+body::-webkit-scrollbar {
+	width: 0.5rem;
+}
+body::-webkit-scrollbar-thumb {
+	outline: 0.1px solid darkgrey;
+	background-color: darkgrey;
+	border-radius: 5px;
 }
 
+/* Icon */
+.ico {
+	color: var(--color);
+	padding: 16px;
+}
 .ico--click {
 	cursor: pointer;
 }
-
 .ico--hide {
 	display: none;
-}
-
-/* Player Control */
-.player-control {
-	background-color: rgb(23, 155, 116);
-	position: fixed;
-	bottom: 0;
-
-	width: 100%;
-	height: 90px;
-	padding: 0 20px;
-
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-
-	z-index: 2;
-}
-
-.player-control .song-info {
-	display: flex;
-	align-items: center;
-	justify-content: flex-start;
-
-	width: 30%;
-	height: 65px;
-}
-
-.player-control .song-info .media-img {
-	background-color: rgb(16, 56, 44);
-	border-radius: 50%;
-
-	width: 64px;
-	height: 64px;
-	margin-right: 10px;
-}
-
-.player-control .song-info .media-content {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	flex-direction: column;
-	color: var(--color);
-}
-
-.player-control .song-info .media-content .title {
-	font-size: 1.2rem;
-	font-weight: bold;
-}
-
-.player-control .song-info .media-option {
-	margin-left: 10px;
-}
-
-.player-control .controller {
-	background-color: rgb(23, 155, 116);
-	max-width: 40vw;
-	height: 75px;
-	flex: 1;
-
-	display: flex;
-	align-items: center;
-	flex-direction: column;
-	justify-content: center;
-}
-
-.player-control .controller .part1 {
-	display: flex;
-	align-items: center;
-	justify-content: space-around;
-
-	flex: 2;
-	width: 50%;
-}
-
-.player-control .controller .part2 {
-	color: var(--color);
-
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-
-	flex: 1;
-	width: 100%;
-	padding: 0 10px 5px;
-}
-
-.player-control .controller .part2 .duration {
-	background-color: white;
-
-	height: 3px;
-	width: 80%;
-}
-
-.player-control .player-tools {
-	display: flex;
-	align-items: center;
-	justify-content: flex-end;
-
-	width: 30%;
-	height: 65px;
 }
