--- a/src/css/player_control.css
+++ b/src/css/player_control.css
@@ -32,7 +32,7 @@
 
 .player-control .song-info .media-img {
 	background-color: rgb(16, 56, 44);
-	border-radius: 50%;
+	border-radius: 30px;
 
 	width: 64px;
 	height: 64px;
