--- a/src/css/style.css
+++ b/src/css/style.css
@@ -22,7 +22,11 @@ body::-webkit-scrollbar-thumb {
 	border-radius: 5px;
 }
 
-/* Icon */
+.logo {
+	width: 50px;
+	height: 50px;
+}
+
 .ico {
 	color: var(--color);
 	padding: 16px;
