--- a/src/css/Grid_Sys.css
+++ b/src/css/Grid_Sys.css
@@ -1,148 +1,154 @@
 .grid-sys {
-	display: block;
 	width: 100%;
+	display: block;
 	padding: 0;
 }
+
 .grid-sys.grid-wide {
 	max-width: 1200px;
 	margin: 0 auto;
 }
 
-.row {
+.grid-row {
 	display: flex;
 	flex-wrap: wrap;
-	margin: 0 -4px;
+	margin-left: -4px;
+	margin-right: -4px;
 }
-.row.no-gutters {
+
+.grid-row.no-gutters {
 	margin-left: 0;
 	margin-right: 0;
 }
 
-.col {
-	padding: 0 4px;
+.grid-col {
+	padding-left: 4px;
+	padding-right: 4px;
 }
 
-.row.no-gutters .col {
+.grid-row.no-gutters .grid-col {
 	padding-left: 0;
 	padding-right: 0;
 }
 
-.l-0 {
+.c-0 {
 	display: none;
 }
 
-.l-1 {
+.c-1 {
 	flex: 0 0 8.33333%;
 	max-width: 8.33333%;
 }
 
-.l-2 {
+.c-2 {
 	flex: 0 0 16.66667%;
 	max-width: 16.66667%;
 }
 
-.l-3 {
+.c-3 {
 	flex: 0 0 25%;
 	max-width: 25%;
 }
 
-.l-4 {
+.c-4 {
 	flex: 0 0 33.33333%;
 	max-width: 33.33333%;
 }
 
-.l-5 {
+.c-5 {
 	flex: 0 0 41.66667%;
 	max-width: 41.66667%;
 }
 
-.l-6 {
+.c-6 {
 	flex: 0 0 50%;
 	max-width: 50%;
 }
 
-.l-7 {
+.c-7 {
 	flex: 0 0 58.33333%;
 	max-width: 58.33333%;
 }
 
-.l-8 {
+.c-8 {
 	flex: 0 0 66.66667%;
 	max-width: 66.66667%;
 }
 
-.l-9 {
+.c-9 {
 	flex: 0 0 75%;
 	max-width: 75%;
 }
 
-.l-10 {
+.c-10 {
 	flex: 0 0 83.33333%;
 	max-width: 83.33333%;
 }
 
-.l-11 {
+.c-11 {
 	flex: 0 0 91.66667%;
 	max-width: 91.66667%;
 }
 
-.l-12 {
+.c-12 {
 	flex: 0 0 100%;
 	max-width: 100%;
 }
 
-.l-o-1 {
+.c-o-1 {
 	margin-left: 8.33333%;
 }
 
-.l-o-2 {
+.c-o-2 {
 	margin-left: 16.66667%;
 }
 
-.l-o-3 {
+.c-o-3 {
 	margin-left: 25%;
 }
 
-.l-o-4 {
+.c-o-4 {
 	margin-left: 33.33333%;
 }
 
-.l-o-5 {
+.c-o-5 {
 	margin-left: 41.66667%;
 }
 
-.l-o-6 {
+.c-o-6 {
 	margin-left: 50%;
 }
 
-.l-o-7 {
+.c-o-7 {
 	margin-left: 58.33333%;
 }
 
-.l-o-8 {
+.c-o-8 {
 	margin-left: 66.66667%;
 }
 
-.l-o-9 {
+.c-o-9 {
 	margin-left: 75%;
 }
 
-.l-o-10 {
+.c-o-10 {
 	margin-left: 83.33333%;
 }
 
-.l-o-11 {
+.c-o-11 {
 	margin-left: 91.66667%;
 }
 
 /* >= Tablet */
 @media (min-width: 740px) {
-	.row {
-		margin: 0 8px;
+	.grid-row {
+		margin-left: -8px;
+		margin-right: -8px;
 	}
 
-	.col {
-		padding: 0 8px;
+	.grid-col {
+		padding-left: 8px;
+		padding-right: 8px;
 	}
 
 	.m-0 {
@@ -271,150 +277,152 @@
 
 /* PC medium resolution > */
 @media (min-width: 1113px) {
-	.row {
-		margin: 0 -12px;
+	.grid-row {
+		margin-left: -12px;
+		margin-right: -12px;
 	}
 
-	.row.sm-gutter {
+	.grid-row.sm-gutter {
 		margin-left: -5px;
 		margin-right: -5px;
 	}
 
-	.col {
-		padding: 0 12px;
+	.grid-col {
+		padding-left: 12px;
+		padding-right: 12px;
 	}
 
-	.row.sm-gutter .col {
+	.grid-row.sm-gutter .grid-col {
 		padding-left: 5px;
 		padding-right: 5px;
 	}
 
-	.h-0 {
+	.l-0 {
 		display: none;
 	}
 
-	.h-1,
-	.h-2,
-	.h-2-4,
-	.h-3,
-	.h-4,
-	.h-5,
-	.h-6,
-	.h-7,
-	.h-8,
-	.h-9,
-	.h-10,
-	.h-11,
-	.h-12 {
+	.l-1,
+	.l-2,
+	.l-2-4,
+	.l-3,
+	.l-4,
+	.l-5,
+	.l-6,
+	.l-7,
+	.l-8,
+	.l-9,
+	.l-10,
+	.l-11,
+	.l-12 {
 		display: block;
 	}
 
-	.h-1 {
+	.l-1 {
 		flex: 0 0 8.33333%;
 		max-width: 8.33333%;
 	}
 
-	.h-2 {
+	.l-2 {
 		flex: 0 0 16.66667%;
 		max-width: 16.66667%;
 	}
 
-	.h-2-4 {
+	.l-2-4 {
 		flex: 0 0 20%;
 		max-width: 20%;
 	}
 
-	.h-3 {
+	.l-3 {
 		flex: 0 0 25%;
 		max-width: 25%;
 	}
 
-	.h-4 {
+	.l-4 {
 		flex: 0 0 33.33333%;
 		max-width: 33.33333%;
 	}
 
-	.h-5 {
+	.l-5 {
 		flex: 0 0 41.66667%;
 		max-width: 41.66667%;
 	}
 
-	.h-6 {
+	.l-6 {
 		flex: 0 0 50%;
 		max-width: 50%;
 	}
 
-	.h-7 {
+	.l-7 {
 		flex: 0 0 58.33333%;
 		max-width: 58.33333%;
 	}
 
-	.h-8 {
+	.l-8 {
 		flex: 0 0 66.66667%;
 		max-width: 66.66667%;
 	}
 
-	.h-9 {
+	.l-9 {
 		flex: 0 0 75%;
 		max-width: 75%;
 	}
 
-	.h-10 {
+	.l-10 {
 		flex: 0 0 83.33333%;
 		max-width: 83.33333%;
 	}
 
-	.h-11 {
+	.l-11 {
 		flex: 0 0 91.66667%;
 		max-width: 91.66667%;
 	}
 
-	.h-12 {
+	.l-12 {
 		flex: 0 0 100%;
 		max-width: 100%;
 	}
 
-	.h-o-1 {
+	.l-o-1 {
 		margin-left: 8.33333%;
 	}
 
-	.h-o-2 {
+	.l-o-2 {
 		margin-left: 16.66667%;
 	}
 
-	.h-o-3 {
+	.l-o-3 {
 		margin-left: 25%;
 	}
 
-	.h-o-4 {
+	.l-o-4 {
 		margin-left: 33.33333%;
 	}
 
-	.h-o-5 {
+	.l-o-5 {
 		margin-left: 41.66667%;
 	}
 
-	.h-o-6 {
+	.l-o-6 {
 		margin-left: 50%;
 	}
 
-	.h-o-7 {
+	.l-o-7 {
 		margin-left: 58.33333%;
 	}
 
-	.h-o-8 {
+	.l-o-8 {
 		margin-left: 66.66667%;
 	}
 
-	.h-o-9 {
+	.l-o-9 {
 		margin-left: 75%;
 	}
 
-	.h-o-10 {
+	.l-o-10 {
 		margin-left: 83.33333%;
 	}
 
-	.h-o-11 {
+	.l-o-11 {
 		margin-left: 91.66667%;
 	}
 }
@@ -429,152 +437,155 @@
 /* > PC low resolution */
 @media (min-width: 1024px) and (max-width: 1239px) {
 	.grid-wide {
-		width: 984px;
+		width: 884px;
 	}
 
-	.grid-wide .row {
-		margin: 0 -12px;
+	.grid-wide .grid-row {
+		margin-left: -12px;
+		margin-right: -12px;
 	}
 
-	.grid-wide .row.sm-gutter {
+	.grid-wide .grid-row.sm-gutter {
 		margin-left: -5px;
 		margin-right: -5px;
 	}
 
-	.grid-wide .col {
-		padding: 0 12px;
+	.grid-wide .grid-col {
+		padding-left: 12px;
+		padding-right: 12px;
 	}
 
-	.grid-wide .row.sm-gutter .col {
-		padding: 0 5px;
+	.grid-wide .grid-row.sm-gutter .grid-col {
+		padding-left: 5px;
+		padding-right: 5px;
 	}
 
-	.grid-wide .h-0 {
+	.grid-wide .l-0 {
 		display: none;
 	}
 
-	.grid-wide .h-1,
-	.grid-wide .h-2,
-	.grid-wide .h-2-4,
-	.grid-wide .h-3,
-	.grid-wide .h-4,
-	.grid-wide .h-5,
-	.grid-wide .h-6,
-	.grid-wide .h-7,
-	.grid-wide .h-8,
-	.grid-wide .h-9,
-	.grid-wide .h-10,
-	.grid-wide .h-11,
-	.grid-wide .h-12 {
+	.grid-wide .l-1,
+	.grid-wide .l-2,
+	.grid-wide .l-2-4,
+	.grid-wide .l-3,
+	.grid-wide .l-4,
+	.grid-wide .l-5,
+	.grid-wide .l-6,
+	.grid-wide .l-7,
+	.grid-wide .l-8,
+	.grid-wide .l-9,
+	.grid-wide .l-10,
+	.grid-wide .l-11,
+	.grid-wide .l-12 {
 		display: block;
 	}
 
-	.grid-wide .h-1 {
+	.grid-wide .l-1 {
 		flex: 0 0 8.33333%;
 		max-width: 8.33333%;
 	}
 
-	.grid-wide .h-2 {
+	.grid-wide .l-2 {
 		flex: 0 0 16.66667%;
 		max-width: 16.66667%;
 	}
 
-	.grid-wide .h-2-4 {
+	.grid-wide .l-2-4 {
 		flex: 0 0 20%;
 		max-width: 20%;
 	}
 
-	.grid-wide .h-3 {
+	.grid-wide .l-3 {
 		flex: 0 0 25%;
 		max-width: 25%;
 	}
 
-	.grid-wide .h-4 {
+	.grid-wide .l-4 {
 		flex: 0 0 33.33333%;
 		max-width: 33.33333%;
 	}
 
-	.grid-wide .h-5 {
+	.grid-wide .l-5 {
 		flex: 0 0 41.66667%;
 		max-width: 41.66667%;
 	}
 
-	.grid-wide .h-6 {
+	.grid-wide .l-6 {
 		flex: 0 0 50%;
 		max-width: 50%;
 	}
 
-	.grid-wide .h-7 {
+	.grid-wide .l-7 {
 		flex: 0 0 58.33333%;
 		max-width: 58.33333%;
 	}
 
-	.grid-wide .h-8 {
+	.grid-wide .l-8 {
 		flex: 0 0 66.66667%;
 		max-width: 66.66667%;
 	}
 
-	.grid-wide .h-9 {
+	.grid-wide .l-9 {
 		flex: 0 0 75%;
 		max-width: 75%;
 	}
 
-	.grid-wide .h-10 {
+	.grid-wide .l-10 {
 		flex: 0 0 83.33333%;
 		max-width: 83.33333%;
 	}
 
-	.grid-wide .h-11 {
+	.grid-wide .l-11 {
 		flex: 0 0 91.66667%;
 		max-width: 91.66667%;
 	}
 
-	.grid-wide .h-12 {
+	.grid-wide .l-12 {
 		flex: 0 0 100%;
 		max-width: 100%;
 	}
 
-	.grid-wide .h-o-1 {
+	.grid-wide .l-o-1 {
 		margin-left: 8.33333%;
 	}
 
-	.grid-wide .h-o-2 {
+	.grid-wide .l-o-2 {
 		margin-left: 16.66667%;
 	}
 
-	.grid-wide .h-o-3 {
+	.grid-wide .l-o-3 {
 		margin-left: 25%;
 	}
 
-	.grid-wide .h-o-4 {
+	.grid-wide .l-o-4 {
 		margin-left: 33.33333%;
 	}
 
-	.grid-wide .h-o-5 {
+	.grid-wide .l-o-5 {
 		margin-left: 41.66667%;
 	}
 
-	.grid-wide .h-o-6 {
+	.grid-wide .l-o-6 {
 		margin-left: 50%;
 	}
 
-	.grid-wide .h-o-7 {
+	.grid-wide .l-o-7 {
 		margin-left: 58.33333%;
 	}
 
-	.grid-wide .h-o-8 {
+	.grid-wide .l-o-8 {
 		margin-left: 66.66667%;
 	}
 
-	.grid-wide .h-o-9 {
+	.grid-wide .l-o-9 {
 		margin-left: 75%;
 	}
 
-	.grid-wide .h-o-10 {
+	.grid-wide .l-o-10 {
 		margin-left: 83.33333%;
 	}
 
-	.grid-wide .h-o-11 {
+	.grid-wide .l-o-11 {
 		margin-left: 91.66667%;
 	}
 }
