--- a/src/css/main_content.css
+++ b/src/css/main_content.css
@@ -1,6 +1,9 @@
 .main-content {
-	background-color: red;
-	height: inherit;
+	background-color: rgb(250, 117, 183);
 
-	z-index: 10;
+	position: absolute;
+	left: 240px;
+	width: calc(100% - 240px - 280px);
+
+	transition: all 0.5s ease;
 }
