--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8,11 +8,6 @@
 	font-family: 'Outfit', sans-serif;
 }
 
-body {
-	margin: 0;
-	padding: 0;
-}
-
 body::-webkit-scrollbar {
 	width: 0.5rem;
 }
@@ -20,6 +15,15 @@ body::-webkit-scrollbar-thumb {
 	outline: 0.1px solid darkgrey;
 	background-color: darkgrey;
 	border-radius: 5px;
+}
+
+a:link,
+a:visited,
+a:hover,
+a:active,
+a:focus {
+	text-decoration: none;
+	color: var(--color);
 }
 
 .logo {
@@ -34,27 +38,16 @@ body::-webkit-scrollbar-thumb {
 .ico--click {
 	cursor: pointer;
 }
+.ico--disable {
+	cursor: not-allowed;
+}
 .ico--hide {
 	display: none;
 }
 
 .main-container {
+	background-color: rgb(255, 205, 214);
 	position: relative;
 	width: 100%;
 	height: 100%;
-	background-color: rgb(255, 205, 214);
-	/* height: calc(100% - 90px); */
-}
-
-a:link,
-a:visited,
-a:hover,
-a:active,
-a:focus {
-	text-decoration: none;
-	color: var(--color);
-}
-
-ul {
-	list-style-type: none;
 }
