--- a/src/css/category_sidebar.css
+++ b/src/css/category_sidebar.css
@@ -47,8 +47,28 @@
 
 .category-sidebar .menu-item {
 	font-size: 1.2rem;
+	letter-spacing: 2px;
 
-	width: 80%;
+	width: 100%;
 	height: 38px;
 	padding: 7px 25px;
+}
+
+.category-sidebar .menu-item.active {
+	background-color: var(--background-menu-item-active);
+}
+
+.category-sidebar .horizone-line {
+	position: relative;
+	width: 100%;
+	height: 20px;
+	background-color: red;
+}
+.category-sidebar .horizone-line::after {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	width: 80%;
+	height: 10px;
+	background-color: black;
 }
