--- a/src/css/player_control.css
+++ b/src/css/player_control.css
@@ -1,12 +1,6 @@
-.vertical-line {
-	background-color: var(--color);
-	width: 3px;
-	height: 50%;
-	margin: 0 20px;
-}
-
 .player-control {
-	background-color: rgb(23, 155, 116);
+	border-top: 1px solid var(--bg-link-active);
+	background-color: var(--bg1);
 	position: fixed;
 	bottom: 0;
 
@@ -31,7 +25,7 @@
 }
 
 .player-control .song-info .media-img {
-	background-color: rgb(16, 56, 44);
+	background-color: rgb(114, 206, 178);
 	border-radius: 30px;
 
 	width: 64px;
@@ -44,7 +38,7 @@
 	align-items: center;
 	justify-content: center;
 	flex-direction: column;
-	color: var(--color);
+	color: var(--text-color);
 }
 
 .player-control .song-info .media-content .title {
@@ -58,7 +52,7 @@
 }
 
 .player-control .controller {
-	background-color: rgb(23, 155, 116);
+	background-color: var(--bg1);
 	max-width: 40vw;
 	height: 75px;
 	flex: 1;
@@ -79,7 +73,7 @@
 }
 
 .player-control .controller .part2 {
-	color: var(--color);
+	color: var(--text-color);
 
 	display: flex;
 	align-items: center;
@@ -91,7 +85,7 @@
 }
 
 .player-control .controller .part2 .duration {
-	background-color: white;
+	background-color: var(--text-color);
 
 	height: 3px;
 	width: 80%;
@@ -104,4 +98,11 @@
 
 	width: 30%;
 	height: 65px;
+}
+
+.vertical-line {
+	background-color: var(--text-color);
+	width: 3px;
+	height: 50%;
+	margin: 0 20px;
 }
