--- a/src/css/main_content.css
+++ b/src/css/main_content.css
@@ -1,9 +1,40 @@
 .main-content {
-	background-color: rgb(250, 117, 183);
+	background-color: var(--bg-blur);
 
 	width: calc(100% - 240px - 280px);
 	position: absolute;
 	left: 240px;
 
 	transition: all 0.5s ease;
+}
+
+.main-content .top-bar {
+	position: relative;
+	top: 0;
+	left: 0;
+
+	width: 100%;
+	height: 70px;
+	padding: 0 30px;
+
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+}
+
+.main-content i {
+	color: var(--text-color);
+	cursor: pointer;
+	padding: 12px;
+}
+
+.main-content .tool-bar {
+	display: flex;
+	align-items: center;
+}
+
+.main-content .tool-bar .ava-img {
+	width: 35px;
+	height: 35px;
+	margin: auto;
 }
