--- a/src/css/main_content.css
+++ b/src/css/main_content.css
@@ -1,9 +1,12 @@
 .main-content {
 	background-color: var(--bg-blur);
+	overflow: hidden auto;
+
+	position: relative;
+	left: 240px;
 
 	width: calc(100% - 240px - 280px);
-	position: absolute;
-	left: 240px;
+	height: calc(100vh - 90px);
 
 	transition: all 0.5s ease;
 }
@@ -93,6 +96,8 @@
 	margin-left: 10px;
 	padding: 13px 10px;
 
+	z-index: 10;
+
 	transition: all 0.5s ease;
 }
 
@@ -147,10 +152,9 @@
 
 .main-content .content {
 	position: relative;
-	padding: 0 54px;
 
 	width: 100%;
-	height: 100%;
+	padding: 0 54px 90px;
 
 	display: flex;
 	align-items: center;
@@ -201,4 +205,85 @@
 .main-content .content .nav-links .link {
 	padding: 5px 25px;
 	border-radius: 20px;
+}
+
+.main-content .content .main-page {
+	width: 100%;
+}
+
+.main-content .content .main-page section {
+	background-color: rgba(54, 102, 86, 0.658);
+	border-radius: 17px;
+
+	display: flex;
+
+	width: 100%;
+	height: auto;
+	padding: 15px;
+	margin-bottom: 15px;
+}
+
+.main-content .content .main-page .title {
+	font-size: 1.5rem;
+}
+
+.main-content .to-top {
+	display: none;
+
+	position: fixed;
+	bottom: 120px;
+	right: 290px;
+	z-index: 10;
+
+	cursor: pointer;
+
+	width: 50px;
+	height: 25px;
+}
+.main-content .to-top:hover {
+	cursor: default;
+}
+
+.main-content .to-top::after,
+.main-content .to-top::before {
+	content: '';
+	position: absolute;
+	bottom: 0;
+
+	background-color: rgb(164, 255, 228);
+	width: 31px;
+	height: 5px;
+	transition: all 0.5s ease;
+}
+.main-content .to-top:hover::after,
+.main-content .to-top:hover::before {
+	transform: rotateZ(0);
+}
+
+.main-content .to-top::after {
+	left: 0;
+	transform: rotateZ(-225deg);
+}
+.main-content .to-top::before {
+	right: 0;
+	transform: rotateZ(225deg);
+}
+
+.main-content .to-top .content {
+	font-size: 1.2rem;
+	font-weight: 700;
+	text-align: center;
+	padding: 0;
+	margin: 0;
+
+	position: absolute;
+	left: 0;
+	right: 0;
+	bottom: 20px;
+
+	display: none;
+	transition: all 0.5s ease;
+}
+.main-content .to-top:hover .content {
+	display: block;
 }
