--- a/src/css/main_content.css
+++ b/src/css/main_content.css
@@ -1,3 +1,10 @@
+.main-content.not-scroll::-webkit-scrollbar {
+	background-color: transparent;
+}
+.main-content.not-scroll::-webkit-scrollbar-thumb {
+	background-color: transparent;
+}
+
 .main-content {
 	background-color: var(--bg-blur);
 	overflow: hidden auto;
@@ -238,7 +245,7 @@
 	cursor: pointer;
 
 	width: 50px;
-	height: 25px;
+	height: 50px;
 }
 .main-content .to-top:hover {
 	cursor: default;
