--- a/src/css/style.css
+++ b/src/css/style.css
@@ -22,10 +22,13 @@
 
 ::-webkit-scrollbar {
 	width: 5px;
+	transition: all 0.5s ease;
 }
 ::-webkit-scrollbar-thumb {
 	background-color: darkgrey;
 	border-radius: 5px;
+
+	transition: all 0.5s ease;
 }
 
 body {
