--- a/src/css/main_content.css
+++ b/src/css/main_content.css
@@ -1,10 +1,3 @@
-.main-content.not-scroll::-webkit-scrollbar {
-	background-color: transparent;
-}
-.main-content.not-scroll::-webkit-scrollbar-thumb {
-	background-color: transparent;
-}
-
 .main-content {
 	background-color: var(--bg-blur);
 	overflow: hidden auto;
@@ -193,10 +186,17 @@
 	width: 80%;
 	height: auto;
 	padding: 10px 15px;
-	margin-bottom: 30px;
+	margin-bottom: 50px;
 
 	border-radius: 25px;
 	background-color: rgb(27, 82, 63);
+}
+.main-content .content .nav-bar.ontop {
+	position: fixed;
+	left: 240px;
+	margin: 0 15px;
+	top: 0;
+	width: 815px;
 }
 
 .main-content .content .nav-links {
@@ -218,20 +218,24 @@
 	width: 100%;
 }
 
-.main-content .content .main-page section {
+.main-content .content section {
 	background-color: rgba(54, 102, 86, 0.658);
 	border-radius: 17px;
 
 	display: flex;
+	flex-direction: column;
 
 	width: 100%;
 	height: auto;
 	padding: 15px;
-	margin-bottom: 15px;
+	margin-bottom: 50px;
 }
 
-.main-content .content .main-page .title {
+.main-content .content section .title {
+	flex: 1;
+	height: 30px;
 	font-size: 1.5rem;
+	padding-bottom: 10px;
 }
 
 .main-content .to-top {
@@ -257,7 +261,7 @@
 	position: absolute;
 	bottom: 0;
 
-	background-color: rgb(164, 255, 228);
+	background-color: var(--bg-light);
 	width: 31px;
 	height: 5px;
 	transition: all 0.5s ease;
@@ -286,7 +290,7 @@
 	position: absolute;
 	left: 0;
 	right: 0;
-	bottom: 20px;
+	bottom: 15px;
 
 	display: none;
 	transition: all 0.5s ease;
