--- a/src/css/main_content.css
+++ b/src/css/main_content.css
@@ -13,7 +13,7 @@
 
 .main-content .top-ico {
 	padding: 0 15px;
-	color: var(--text-color);
+	color: var(--bg-lv0);
 }
 
 .main-content .top-bar {
@@ -54,7 +54,7 @@
 
 .main-content .search-bar input {
 	background-color: var(--bg-blur);
-	color: var(--text-color);
+	color: var(--bg-lv0);
 
 	width: 90%;
 	height: 34px;
@@ -67,7 +67,7 @@
 }
 .main-content .search-bar input::placeholder,
 .main-content .search-bar input:target {
-	color: var(--text-color);
+	color: var(--bg-lv0);
 }
 
 .main-content .search-bar input:focus {
@@ -81,7 +81,7 @@
 
 .main-content .search-bar .suggest-list {
 	background-color: var(--bg1);
-	color: var(--text-color);
+	color: var(--bg-lv0);
 	font-size: 1rem;
 
 	display: none;
@@ -234,7 +234,7 @@
 .main-content .content section .title {
 	flex: 1;
 	height: 30px;
-	font-size: 1.3rem;
+	font-size: 1.4rem;
 	padding-bottom: 10px;
 
 	display: flex;
@@ -276,6 +276,7 @@
 }
 
 .main-content .content section img {
+	cursor: pointer;
 	position: absolute;
 	left: 0;
 	top: 0;
@@ -287,6 +288,76 @@
 	opacity: 0;
 
 	transition: all 0.5s ease;
+}
+
+.main-content .content .section-content {
+	display: flex;
+}
+
+.main-content .content .song-list {
+	flex: 1;
+	position: relative;
+
+	display: flex;
+	align-items: flex-start;
+	flex-direction: column;
+	justify-content: flex-start;
+
+	height: 250px;
+	padding: 0 30px;
+	margin-top: 15px;
+	overflow: hidden auto;
+}
+
+.main-content .content .song-item {
+	flex: 1;
+	border-radius: 10px;
+	width: 100%;
+	height: 60px;
+	padding: 10px;
+	margin-bottom: 15px;
+
+	cursor: pointer;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
+
+.main-content .content .song-item:hover {
+	background-color: var(--bg-link-active);
+}
+
+.main-content .content .song-item .left {
+	display: flex;
+	align-items: center;
+	justify-content: flex-start;
+}
+
+.main-content .content .song-item .left-content {
+	position: relative;
+
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	justify-content: flex-start;
+}
+
+.main-content .content .song-item img {
+	width: 40px;
+	height: 40px;
+	margin-right: 15px;
+
+	position: relative;
+	opacity: 1;
+}
+
+.main-content .content .song-item .song-title {
+	font-weight: 600;
+}
+
+.main-content .content .song-item .right {
+	display: flex;
+	align-items: center;
 }
 
 .main-content .to-top {
@@ -302,6 +373,7 @@
 	width: 50px;
 	height: 50px;
 }
+
 .main-content .to-top:hover {
 	cursor: default;
 }
