--- a/src/css/category_sidebar.css
+++ b/src/css/category_sidebar.css
@@ -1,5 +1,5 @@
 .category-sidebar {
-	background-color: var(--bg2);
+	background-color: var(--bg-lv8);
 
 	display: flex;
 	align-items: center;
@@ -18,7 +18,7 @@
 
 .category-sidebar .title,
 .category-sidebar .title a {
-	color: var(--text-color);
+	color: var(--bg-lv0);
 	font-size: 1.4rem;
 	font-weight: bold;
 
@@ -64,7 +64,7 @@
 	margin-right: 10px;
 }
 .category-sidebar .item.active {
-	background-color: var(--bg-link-active);
+	background-color: var(--bg-lv6);
 }
 
 .category-sidebar .horizone-line {
@@ -74,7 +74,7 @@
 .category-sidebar .horizone-line::after {
 	content: '';
 	position: absolute;
-	border-top: 1px solid var(--bg-link-active);
+	border-top: 1px solid var(--bg-lv6);
 
 	top: 50%;
 	left: 50%;
@@ -107,7 +107,7 @@
 	background-image: linear-gradient(117deg, #5a4be7, #c86dd7 102%);
 	border-radius: 8px;
 	text-align: center;
-	color: var(--text-color);
+	color: var(--bg-lv0);
 
 	padding: 15px 8px;
 	margin: 10px 20px;
@@ -132,8 +132,8 @@
 }
 
 .category-sidebar .create-new-playlist {
-	border-top: 1px solid var(--bg-link-active);
-	background-color: var(--bg2);
+	border-top: 1px solid var(--bg-lv6);
+	background-color: var(--bg-lv8);
 
 	position: fixed;
 	left: 0;
@@ -144,7 +144,7 @@
 }
 
 .category-sidebar .new-playlist-btn {
-	color: var(--text-color);
+	color: var(--bg-lv0);
 	font-size: 1.2rem;
 
 	cursor: pointer;
