--- a/src/css/category_sidebar.css
+++ b/src/css/category_sidebar.css
@@ -1,5 +1,10 @@
+.category-sidebar .music-option:hover::-webkit-scrollbar-thumb {
+	background-color: var(--bg-lv2);
+}
+
 .category-sidebar {
 	background-color: var(--bg-lv8);
+	border-right: 1px solid var(--bg-lv7);
 
 	display: flex;
 	align-items: center;
@@ -52,19 +57,25 @@
 	width: 100%;
 	margin: 0;
 }
-.category-sidebar .list li {
-	margin-left: 3px;
-}
 
 .category-sidebar .item {
+	cursor: pointer;
 	height: 38px;
+	margin-left: 3px;
 	padding: 7px 25px;
+	transition: background 0.5s ease;
 }
 .category-sidebar .item i {
 	margin-right: 10px;
 }
+
+.category-sidebar .item:hover,
 .category-sidebar .item.active {
 	background-color: var(--bg-lv6);
+	border-left: 5px solid var(--bg-lv0);
+}
+.category-sidebar .item:hover {
+	opacity: 0.6;
 }
 
 .category-sidebar .horizone-line {
@@ -132,7 +143,8 @@
 }
 
 .category-sidebar .create-new-playlist {
-	border-top: 1px solid var(--bg-lv6);
+	border-top: 1px solid var(--bg-lv7);
+	border-right: 1px solid var(--bg-lv7);
 	background-color: var(--bg-lv8);
 
 	position: fixed;
