--- a/src/css/style.css
+++ b/src/css/style.css
@@ -18,12 +18,10 @@
 
 ::-webkit-scrollbar {
 	width: 5px;
-	transition: all 0.5s ease;
 }
 ::-webkit-scrollbar-thumb {
-	background-color: var(--bg-lv6);
 	border-radius: 5px;
-	transition: all 0.5s ease;
+	background-color: transparent;
 }
 
 body {
