--- a/src/css/style.css
+++ b/src/css/style.css
@@ -23,6 +23,9 @@
 	border-radius: 5px;
 	background-color: transparent;
 }
+::-webkit-scrollbar:horizontal {
+	height: 5px;
+}
 
 body {
 	overflow: hidden;
@@ -54,7 +57,8 @@ a:focus {
 .ico--disable {
 	cursor: not-allowed;
 }
-.ico--hide {
+.ico--hide,
+.hide {
 	display: none;
 }
 
